fix: make toys movable on mobiles

--- a/src/pages/tree-page/tree-page.css
+++ b/src/pages/tree-page/tree-page.css
@@ -29,6 +29,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    pointer-events: none;
+    touch-action: none;
 }
 
 .treePage__title {
